--- a/HTML/timetableparser/public/leftstyle.css
+++ b/HTML/timetableparser/public/leftstyle.css
@@ -26,18 +26,31 @@
     grid-row-end: 5;
 }
 
-.break {
+.break1 {
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 6;
     grid-row-end: 6;
 }
 
-.break1 {
+.break12 {
     grid-column-start: 2;
     grid-column-end: 7;
     grid-row-start: 6;
     grid-row-end: 6;
+}
+.break2 {
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 8;
+    grid-row-end: 8;
+}
+
+.break22 {
+    grid-column-start: 2;
+    grid-column-end: 7;
+    grid-row-start: 8;
+    grid-row-end: 8;
 }
 
 .p6 {
@@ -50,13 +63,13 @@
 .p7 {
     grid-column-start: 1;
     grid-column-end: 1;
-    grid-row-start: 8;
-    grid-row-end: 8;
+    grid-row-start: 9;
+    grid-row-end: 9;
 }
 
 .p8 {
     grid-column-start: 1;
     grid-column-end: 1;
-    grid-row-start: 9;
-    grid-row-end: 9;
+    grid-row-start: 10;
+    grid-row-end: 10;
 }
