--- a/HTML/timetableparser/public/sidebarCSS.css
+++ b/HTML/timetableparser/public/sidebarCSS.css
@@ -11,6 +11,7 @@ body {
   left: 0;
   background-color: #111;
   transition: 1.0s;
+  transition-timing-function: cubic-bezier(0.63, -0.55, 0.54, 1.89);
   overflow-x: hidden;
   padding-top: 60px;
   white-space: nowrap;
@@ -51,7 +52,8 @@ main .sidebar {
 
 #main {
   margin-left: 85px;
-  transition: margin-left 0.5s;
+  transition: margin-left 1.0s;
+  transition-timing-function: cubic-bezier(0.63, -0.55, 0.54, 1.89);
 }
 
 @media screen and (max-height: 450px) {
