--- a/HTML/timetableparser/public/sidebarCSS.css
+++ b/HTML/timetableparser/public/sidebarCSS.css
@@ -10,10 +10,9 @@ body {
   top: 0;
   left: 0;
   background-color: #111;
-  transition: 1.0s;
-  transition-timing-function: cubic-bezier(0.63, -0.55, 0.54, 1.89);
+  transition: 1.0s cubic-bezier(0.63, -0.55, 0.54, 1.89);
   overflow-x: hidden;
-  padding-top: 60px;
+  padding-top: 10px;
   white-space: nowrap;
 }
 
@@ -49,7 +48,9 @@ main .sidebar {
 .material-icons {
   padding-bottom: 3px;
 }
-
+#title{
+  padding-bottom: 40px;
+}
 #main {
   margin-left: 85px;
   transition: margin-left 1.0s;
