--- a/HTML/timetableparser/public/style.css
+++ b/HTML/timetableparser/public/style.css
@@ -1,11 +1,37 @@
 .wrapper {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: 73.7px;
+    grid-auto-rows: 10vh;
 }
 
 * {
     box-sizing: border-box;
+}
+
+.authuserAsk{
+    position: absolute;
+    width: 400px;
+    height: 150px;
+    background-color: #46454e;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    margin:auto;
+    padding: 20px;
+}
+
+#authuserAsk{
+    width: 100%;
+    height: 100%;
+    background-color: #454e4579;
+    position: absolute;
+    left: 0%;
+    z-index: 0;
+}
+
+.authuserAsk a{
+    color: #000000;
 }
 
 .wrapper {
@@ -49,6 +75,10 @@ body {
 
 .pointer{
     cursor: pointer;
+}
+
+.default{
+    cursor: default;
 }
 
 /* this is form styling */
